api-ministore/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ministore #The cluster and all related resources are created in this namespace
  labels:
    app.kubernetes.io/part-of: ministore
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
