api-ministore/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ministore-api
  namespace: ministore
  labels: {app.kubernetes.io/name: ministore-api, app.kubernetes.io/part-of: ministore}
spec:
  replicas: 4 #starts up a cluster of 4 pods for the API service
  revisionHistoryLimit: 5
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxSurge: 1, maxUnavailable: 0}
  selector:
    matchLabels: {app.kubernetes.io/name: ministore-api}
  template:
    metadata:
      labels: {app.kubernetes.io/name: ministore-api, app.kubernetes.io/part-of: ministore}
    spec:
      serviceAccountName: ministore-api
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector: {matchLabels: {app.kubernetes.io/name: ministore-api}}
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector: {matchLabels: {app.kubernetes.io/name: ministore-api}}
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: api
          image: ghcr.io/adehorizon/ministore-api:1.0.0
          imagePullPolicy: IfNotPresent
          ports: [{name: http, containerPort: 8080}]
          envFrom: [{configMapRef: {name: ministore-api-config}}]
          resources:
            requests: {cpu: 100m, memory: 128Mi}
            limits: {cpu: "1", memory: 256Mi}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}

#Pod Health and Liveness configuration
          startupProbe:
            httpGet: {path: /livez, port: http}
            periodSeconds: 2
            failureThreshold: 15
          livenessProbe:
            httpGet: {path: /livez, port: http}
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet: {path: /readyz, port: http}
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
