api-ministore/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ministore-api
  namespace: ministore
spec:
  type: ClusterIP
  selector: {app.kubernetes.io/name: ministore-api}
  ports: [{name: http, port: 80, targetPort: http}]
